# PF-scaling_and_DA_fingerprints

./: README.md  feature_engineering.py  learning_curve_analysis.py  main.py  pyproject.toml  run_tsne.py  training_pipeline.py
configs/: config_colors.yaml  config_labels.yaml  config_pattern.yaml  r4_config_allv2.yaml  test-to_public-configs.yaml  to_public-configs.yaml
dataset/database/: data.py  data_format.yaml  gen_baseline_cfid.py  merge_tmp_data.py
dataset/labels/: 2dmd_host_density.json
dataset/raw/: gen_cfid_pristine_structure.py
dataset/raw/pristine_structure_cif_file/: pristine_BN.cif  pristine_GaSe.cif  pristine_InSe.cif  pristine_MoS2.cif  pristine_P.cif  pristine_WSe2.cif
feature_sets/: cfid.json  chem_cfid.json
notebooks/: 0002_cv_results.ipynb  0003_testset_results.ipynb  0004_feature_importance.ipynb  0005_model_comparison_eform.ipynb  0006_model_comparison_gap.ipynb
notebooks/visualize_utils/: analyzing.py
src/: __init__.py  analyzing_data.py  data.py  data_format.yaml  distances.py  loading_data.py  model_evaluation.py  path_manipulation.py  training_predictor.py
src/utils/: DataHandler.py  ResultsHandler.py  __init__.py  plot.py
