[project]
name = "26-pfscalig-dafingerprint-to-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase==3.24.0",
    "catboost==1.2.7",
    "colorcet>=3.1.0",
    "ipykernel>=6.30.1",
    "jarvis-tools==2024.10.30",
    "matminer==0.9.3",
    "matplotlib>=3.7.5",
    "mrmr-selection==0.2.8",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "pycaret>=2.2.2",
    "pymatgen===2025.2.18",
    "scikit-learn==1.4.2",
    "scipy>=1.11.4",
    "seaborn==0.13.2",
    "tqdm==4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
