[project]
name = "26-pfscalig-dafingerprint-to-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase",
    "catboost",
    "colorcet",
    "ipykernel",
    "jarvis-tools",
    "matminer==0.9.3",
    "matplotlib",
    "mrmr-selection",
    "numpy",
    "pandas",
    "pycaret==3.3.2",
    "pymatgen",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tqdm",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
